--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,12 +11,13 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['precios']">Precios</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated()">
         <a class="nav-link" [routerLink]="['protegida']">Protegida</a>
       </li>
     </ul>
     <span class="navbar-text">
-      Navbar text with an inline element
+      <button (click)="login()" *ngIf="!auth.isAuthenticated()" type="button" name="button" class="btn btn-outline-primary">Login</button>
+      <button (click)="salir()" *ngIf="auth.isAuthenticated()" type="button" name="button" class="btn btn-outline-primary">Salir</button>
     </span>
   </div>
 </nav>
